# auto-coloc-gui

./: .coverage  .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-version.yml  system-compatability.yml  unit-tests.yml
coloc/: main.py  test-proc.py
coloc/backend/: Visualiser copy.py  Visualiser.py  classes.py  debug_weird_tiffs.py  im_debug.py  preprocessing-class.py  preprocessing.py  preprocessingclass.py
coloc/gui/: display_results.py  giu_main.py  gui.py  gui_ah.py  gui_main.py  gui_testing.py  test.tif
coloc/tests/: test-preproc.py  test-vis.py
data/output/: img_0.tif  img_1.tif  img_10.tif  img_11.tif  img_12.tif  img_13.tif  img_14.tif  img_15.tif  img_16.tif  img_17.tif  img_18.tif  img_19.tif  img_2.tif  img_20.tif  img_21.tif  img_22.tif  img_23.tif  img_24.tif  img_25.tif  img_26.tif  img_27.tif  img_28.tif  img_29.tif  img_3.tif  img_30.tif  img_31.tif  img_4.tif  img_5.tif  img_6.tif  img_7.tif  img_8.tif  img_9.tif
docs/: conf.py  index.html  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: coloc.backend.rst  coloc.rst  coloc.tests.rst  conf.py  index.rst  modules.rst
