
[metadata]
name = oxbiodtp_auto_coloc_gui
version = 1.0.0
description = 'Tool for analysing colocalisation across channels in flourescence microscopy images'
url = https://github.com/Software-Engineering-BBSRC-Group-6/auo-coloc-gui
long_description = file: README.md
long_description_content_type = text/markdown
author = 'Dan Hudson, Ishaan Kapoor, Sam Johnson, Amit Halkhoree, Cameron Anderson, Joe Pollacco'
author_email = ishaan.kapoor@dtc.ox.ac.uk
keywords = flourescence microscopy, colocalisation, co-occurance, correlation
license = MIT
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = False
packages = auto_coloc_gui